We have a working shitty web UI

--- a/SystemSw-UI/appsettings.json
+++ b/SystemSw-UI/appsettings.json
@@ -6,5 +6,26 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Extron": {
+    "Port": "/dev/ttyUSB0",
+    "ReadTimeout": 1000,
+    "WriteTimeout": 1000
+  },
+  "ChannelMappings": {
+    "1": "Super Nintendo",
+    "2": "Wii",
+    "3": "Nintendo 64",
+    "4": "PS2 (JP)",
+    "5": "Famicom",
+    "7": "Sega Memecast",
+    "8": "Playstation 2 (EN)"
+  },
+  "Kestrel": {
+    "EndPoints": {
+        "Http": {
+            "Url": "http://*:8000"
+        }
+    }
+  },
   "AllowedHosts": "*"
 }
