Configure drive everything

--- a/SystemSw-Api/appsettings.json
+++ b/SystemSw-Api/appsettings.json
@@ -9,7 +9,8 @@
   "Extron": {
     "Port": "/dev/ttyUSB0",
     "ReadTimeout": 1000,
-    "WriteTimeout": 1000
+    "WriteTimeout": 1000,
+    "Type": "Serial"
   },
   "ChannelMappings": {
     "1": "Super Nintendo",
