--- a/SystemSw-Tests/SystemSw-Tests.csproj
+++ b/SystemSw-Tests/SystemSw-Tests.csproj
@@ -20,4 +20,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SystemSw-Core\SystemSw-Core.csproj" />
+  </ItemGroup>
+
 </Project>
