--- a/SystemSw-Tests/SystemSw-Tests.csproj
+++ b/SystemSw-Tests/SystemSw-Tests.csproj
@@ -9,9 +9,15 @@
 
   <ItemGroup>
     <None Remove="appsettings.json" />
+    <None Remove="appsettings.noautoload.json" />
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="appsettings.noautoload.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
     <Content Include="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
