--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -12,7 +12,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Setup NPM
     - uses: actions/checkout@v2
+    - uses: actions/setup-node@v2
+      with:
+        node-version: '14'  
+    - run: npm install
+    - run: npm test
+    
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
@@ -23,3 +30,29 @@ jobs:
       run: dotnet build --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
+      
+    - name: Publish API
+      run: dotnet publish -c Release -o .\Release-Api .\SystemSw-Api\SystemSw-Api.csproj
+      
+    - name: Publish UI
+      run: dotnet publish -c Release -o .\Release-Ui .\SystemSw-Ui\SystemSw-Ui.csproj
+  
+    - name: Zip API
+      uses: thedoctor0/zip-release@master
+      with:
+        type: 'zip'
+        filename: 'release-api.zip'
+        path: '.\Release-Api'
+        
+    - name: Zip UI
+      uses: thedoctor0/zip-release@master
+      with:
+        type: 'zip'
+        filename: 'release-ui.zip'
+        path: '.\Release-Ui'
+        
+    - name: Upload artifacts
+    - uses: actions/upload-artifact@v2
+      with:
+        name: build-artifacts
+        path: '.\*.zip'
