--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -8,7 +8,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -21,31 +20,35 @@ jobs:
     - run: npm test
     
     - name: Setup .NET
-      uses: actions/setup-dotnet@v1
+    - uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 5.0.x
     - name: Restore dependencies
       run: dotnet restore
+      
     - name: Build
       run: dotnet build --no-restore
+      
     - name: Test
       run: dotnet test --no-build --verbosity normal
       
     - name: Publish API
+      if: success()
       run: dotnet publish -c Release -o .\Release-Api .\SystemSw-Api\SystemSw-Api.csproj
       
     - name: Publish UI
+      if: success()
       run: dotnet publish -c Release -o .\Release-Ui .\SystemSw-Ui\SystemSw-Ui.csproj
   
     - name: Zip API
-      uses: thedoctor0/zip-release@master
+    - uses: thedoctor0/zip-release@master
       with:
         type: 'zip'
         filename: 'release-api.zip'
         path: '.\Release-Api'
         
     - name: Zip UI
-      uses: thedoctor0/zip-release@master
+    - uses: thedoctor0/zip-release@master
       with:
         type: 'zip'
         filename: 'release-ui.zip'
