--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -28,14 +28,14 @@ jobs:
       run: dotnet restore
       
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build --no-restore .\SystemSw-Core\SystemSw-Api\SystemSw-Api.csproj
       
     - name: Test
       run: dotnet test --no-build --verbosity normal
       
     - name: Publish API
       if: success()
-      run: dotnet publish -c Release -o .\Release-Api .\SystemSw-Api\SystemSw-Api.csproj
+      run: dotnet publish -c Release -o .\Release-Api .\SystemSw-Core\SystemSw-Api\SystemSw-Api.csproj
 
     - name: Zip API
       uses: thedoctor0/zip-release@master
@@ -71,14 +71,11 @@ jobs:
       run: dotnet restore
       
     - name: Build
-      run: dotnet build --no-restore
-      
-    - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet build --no-restore .\SystemSw-Core\SystemSw-Ui\SystemSw-Ui.csproj
       
     - name: Publish UI
       if: success()
-      run: dotnet publish -c Release -o .\Release-Ui .\SystemSw-Ui\SystemSw-Ui.csproj
+      run: dotnet publish -c Release -o .\Release-Ui .\SystemSw-Core\SystemSw-Api\SystemSw-Api.csproj
     
     - name: Zip UI
       uses: thedoctor0/zip-release@master
