--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   build_api:
+    name: Build, test, and Publish API
     runs-on: ubuntu-latest
 
     steps:
@@ -27,9 +28,6 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore ./SystemSw-Api/SystemSw-Api.csproj
       
-    - name: Help
-      run: ls -a
-      
     - name: Build
       run: dotnet build --no-restore ./SystemSw-Api/SystemSw-Api.csproj
       
@@ -44,16 +42,18 @@ jobs:
       uses: thedoctor0/zip-release@master
       with:
         type: 'zip'
-        filename: 'release-api.zip'
+        filename: './release-api.zip'
         path: './Release-Api'
         
     - name: Upload API
       uses: ncipollo/release-action@v1
       with:
-        artifacts: "release-api.zip"
+        artifacts: "./release-api.zip"
+        commit: ${{ github.sha }}
         token: ${{ secrets.GITHUB_TOKEN }}
 
   build_ui:
+    name: Build and Publish UI
     runs-on: ubuntu-latest
 
     steps:
@@ -71,24 +71,25 @@ jobs:
       uses: actions/checkout@v2
     
     - name: Restore dependencies
-      run: dotnet restore ./SystemSw-Ui/SystemSw-Ui.csproj
+      run: dotnet restore ./SystemSw-UI/SystemSw-UI.csproj
       
     - name: Build
-      run: dotnet build --no-restore ./SystemSw-Ui/SystemSw-Ui.csproj
+      run: dotnet build --no-restore ./SystemSw-UI/SystemSw-UI.csproj
       
     - name: Publish UI
       if: success()
-      run: dotnet publish -c Release -o ./Release-Ui ./SystemSw-Ui/SystemSw-Ui.csproj
+      run: dotnet publish -c Release -o ./Release-UI ./SystemSw-UI/SystemSw-UI.csproj
     
     - name: Zip UI
       uses: thedoctor0/zip-release@master
       with:
         type: 'zip'
-        filename: 'release-ui.zip'
+        filename: './release-ui.zip'
         path: './Release-Ui'
         
     - name: Upload UI
       uses: ncipollo/release-action@v1
       with:
-        artifacts: "release-ui.zip"
+        artifacts: "./release-ui.zip"
+        commit: ${{ github.sha }}
         token: ${{ secrets.GITHUB_TOKEN }}
