Fixing output types of a few projects

--- a/SystemSw-Tests/SystemSw-Tests.csproj
+++ b/SystemSw-Tests/SystemSw-Tests.csproj
@@ -5,6 +5,8 @@
     <RootNamespace>SystemSw_Tests</RootNamespace>
 
     <IsPackable>false</IsPackable>
+
+    <OutputType>Library</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
