Removed several pre-defined defaults from appsettings.json

--- a/SystemSw-Api/appsettings.json
+++ b/SystemSw-Api/appsettings.json
@@ -7,20 +7,11 @@
     }
   },
   "Extron": {
-    "Port": "/dev/ttyUSB0",
+    "Port": "",
     "ReadTimeout": 1000,
     "WriteTimeout": 1000,
     "Type": "Serial",
     "AutoOpen": "true"
-  },
-  "ChannelMappings": {
-    "1": "Super Nintendo",
-    "2": "Wii",
-    "3": "Nintendo 64",
-    "4": "PS2 (JP)",
-    "5": "Famicom",
-    "7": "Sega Memecast",
-    "8": "Playstation 2 (EN)"
   },
   "Kestrel": {
     "EndPoints": {
