--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,7 +22,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           WITH_V: true
-          RELEASE_BRANCHES: 'master'
+          RELEASE_BRANCHES: 'develop,test,master'
           PRERELEASE_SUFFIX: 'pre-'
           INITIAL_VERSION: '1.0.0'
 
