--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,26 +1,15 @@
 name: .NET
 
-on:
+on:  
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+    tags:
+      - '*'
 
 jobs:
-  generate_build:
-    name: Generate Appropriate Tag
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      
-      - name: Setup Tagging
-        uses: juliansangillo/tag-version@v1.5
 
   build_api:
     name: Build, test, and Publish API
     runs-on: ubuntu-latest
-    needs: [generate_build]
     
     steps:    
     - name: Setup .NET
@@ -57,12 +46,12 @@ jobs:
         artifacts: "./release-api-${{ github.sha }}.zip"
         commit: ${{ github.sha }}
         omitBody: 'true'
+        tag: 'latest'
         token: ${{ secrets.GITHUB_TOKEN }}
 
   build_ui:
     name: Build and Publish UI
     runs-on: ubuntu-latest
-    needs: [generate_build]
 
     steps:
     - name: Setup NPM
@@ -93,11 +82,12 @@ jobs:
       with:
         type: 'zip'
         filename: './release-ui-${{ github.sha }}.zip'
-        path: './Release-Ui'
+        path: './Release-UI'
         
     - name: Upload UI
       uses: ncipollo/release-action@v1
       with:
         artifacts: "./release-ui-${{ github.sha }}.zip"
         commit: ${{ github.sha }}
+        tag: 'latest'
         token: ${{ secrets.GITHUB_TOKEN }}
