--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -19,7 +19,6 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           release_branches: 'master'
           pre_release_branches: 'develop,test'
-          append_to_pre_release_tag: '-pre'
           
       - name: Create a GitHub release
         uses: actions/create-release@v1
@@ -72,6 +71,7 @@ jobs:
       uses: ncipollo/release-action@v1
       with:
         artifacts: "./release-api-${{ github.sha }}.zip"
+        allowUpdates: 'true'
         commit: ${{ github.sha }}
         omitBody: 'true'
         tag: ${{ steps.previoustag.outputs.tag }}
@@ -121,6 +121,7 @@ jobs:
       uses: ncipollo/release-action@v1
       with:
         artifacts: "./release-ui-${{ github.sha }}.zip"
+        allowUpdates: 'true'
         commit: ${{ github.sha }}
         tag: ${{ steps.previoustag.outputs.tag }}
         token: ${{ secrets.GITHUB_TOKEN }}
