--- a/SystemSw-Api/appsettings.json
+++ b/SystemSw-Api/appsettings.json
@@ -7,6 +7,12 @@
     }
   },
   "Extron": {
+    "Telnet": {
+
+    },
+    "Serial": {
+
+    },
     "Port": "",
     "ReadTimeout": 1000,
     "WriteTimeout": 1000,
