#12 - Included a new appsettings.json file in the SystemCommunicator project to show how to differentiate between Serial and Telnet

--- a/SystemCommunicator/appsettings.json
+++ b/SystemCommunicator/appsettings.json
@@ -7,19 +7,18 @@
     }
   },
   "Extron": {
+    "Telnet": {
+      "ReadTimeout": 1000,
+      "WriteTimeout": 1000,
+      "AutoOpen": "true",
+      "IpAddress": "192.168.254.254",
+      "Port": 23
+    },
     "Serial": {
       "ReadTimeout": 1000,
       "WriteTimeout": 1000,
       "AutoOpen": "true",
       "Port": "COM1"
     }
-  },
-  "Kestrel": {
-    "EndPoints": {
-        "Http": {
-            "Url": "http://*:8000"
-        }
-    }
-  },
-  "AllowedHosts": "*"
+  }
 }
