--- a/SystemCommunicator/appsettings.json
+++ b/SystemCommunicator/appsettings.json
@@ -12,7 +12,9 @@
       "WriteTimeout": 1000,
       "AutoOpen": "true",
       "IpAddress": "192.168.254.254",
-      "Port": 23
+      "Port": 23,
+      "Username": "",
+      "Password": ""
     },
     "Serial": {
       "ReadTimeout": 1000,
