#12 - Got the class actually setup...

--- a/SystemSw-Tests/SystemSw.Sharp.Tests.csproj
+++ b/SystemSw-Tests/SystemSw.Sharp.Tests.csproj
@@ -39,6 +39,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Crosspoint.Communicator\Crosspoint.Communicator.csproj" />
     <ProjectReference Include="..\System8Communicator\System8.Communicator.csproj" />
     <ProjectReference Include="..\SystemCommunicator\SystemCommunicator.csproj" />
   </ItemGroup>
