--- a/SystemSw-Api/appsettings.json
+++ b/SystemSw-Api/appsettings.json
@@ -14,12 +14,24 @@
       "Port": "COM1"
     }
   },
-  "Kestrel": {
-    "EndPoints": {
-        "Http": {
-            "Url": "http://*:8000"
-        }
-    }
+  "ChannelMappings": {
+    "1": "Input 1",
+    "2": "Input 2",
+    "3": "Input 3",
+    "4": "Input 4",
+    "5": "Input 5",
+    "6": "Input 6",
+    "7": "Input 7",
+    "8": "Input 8",
+    "9": "Input 9",
+    "10": "Input 10"
   },
-  "AllowedHosts": "*"
-}
+    "Kestrel": {
+      "EndPoints": {
+        "Http": {
+          "Url": "http://*:8000"
+        }
+      }
+    },
+    "AllowedHosts": "*"
+  }
