--- a/Crosspoint/Crosspoint.Communicator/Crosspoint.Communicator.csproj
+++ b/Crosspoint/Crosspoint.Communicator/Crosspoint.Communicator.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SystemCommunicator\SystemCommunicator.csproj" />
+    <ProjectReference Include="..\..\SystemCommunicator\SystemCommunicator.csproj" />
   </ItemGroup>
 
 </Project>
