--- a/System8/System8.Api/System8.Api.csproj
+++ b/System8/System8.Api/System8.Api.csproj
@@ -10,8 +10,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\SystemCommunicator\SystemCommunicator.csproj" />
     <ProjectReference Include="..\System8Communicator\System8.Communicator.csproj" />
-    <ProjectReference Include="..\SystemCommunicator\SystemCommunicator.csproj" />
   </ItemGroup>
 
 </Project>
