--- a/System8/System8Communicator/System8.Communicator.csproj
+++ b/System8/System8Communicator/System8.Communicator.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SystemCommunicator\SystemCommunicator.csproj" />
+    <ProjectReference Include="..\..\SystemCommunicator\SystemCommunicator.csproj" />
   </ItemGroup>
 
 </Project>
