Added 'Extron.Mode' for configuration (to switch connection modes) and also began fixing up Crosspoint.Api

--- a/SystemCommunicator/appsettings.json
+++ b/SystemCommunicator/appsettings.json
@@ -7,13 +7,13 @@
     }
   },
   "Extron": {
+    "Mode": "",
     "Telnet": {
       "ReadTimeout": 1000,
       "WriteTimeout": 1000,
       "AutoOpen": "true",
       "IpAddress": "192.168.254.254",
       "Port": 23,
-      "Username": "",
       "Password": ""
     },
     "Serial": {
