--- a/Crosspoint/Crosspoint.Api/appsettings.json
+++ b/Crosspoint/Crosspoint.Api/appsettings.json
@@ -6,5 +6,29 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Extron": {
+    "Mode": "",
+    "Telnet": {
+      "ReadTimeout": 1000,
+      "WriteTimeout": 1000,
+      "AutoOpen": "true",
+      "IpAddress": "192.168.254.254",
+      "Port": 23,
+      "Password": ""
+    },
+    "Serial": {
+      "ReadTimeout": 1000,
+      "WriteTimeout": 1000,
+      "AutoOpen": "true",
+      "Port": "COM1"
+    }
+  },
+  "Kestrel": {
+    "EndPoints": {
+      "Http": {
+        "Url": "http://*:8000"
+      }
+    }
+  },
   "AllowedHosts": "*"
 }
