--- a/System8/System8.Api/appsettings.json
+++ b/System8/System8.Api/appsettings.json
@@ -7,6 +7,18 @@
     }
   },
   "Extron": {
+    "Inputs": {
+      "1": "Input 1",
+      "2": "Input 2",
+      "3": "Input 3",
+      "4": "Input 4",
+      "5": "Input 5",
+      "6": "Input 6",
+      "7": "Input 7",
+      "8": "Input 8",
+      "9": "Input 9",
+      "10": "Input 10"
+    },
     "Mode": "Serial",
     "Serial": {
       "ReadTimeout": 1000,
@@ -15,24 +27,12 @@
       "Port": "COM1"
     }
   },
-  "ChannelMappings": {
-    "1": "Input 1",
-    "2": "Input 2",
-    "3": "Input 3",
-    "4": "Input 4",
-    "5": "Input 5",
-    "6": "Input 6",
-    "7": "Input 7",
-    "8": "Input 8",
-    "9": "Input 9",
-    "10": "Input 10"
-  },
-    "Kestrel": {
-      "EndPoints": {
-        "Http": {
-          "Url": "http://*:8000"
-        }
+  "Kestrel": {
+    "EndPoints": {
+      "Http": {
+        "Url": "http://*:8000"
       }
-    },
-    "AllowedHosts": "*"
+    }
+  },
+  "AllowedHosts": "*"
   }
