--- a/Crosspoint/Crosspoint.Api/appsettings.json
+++ b/Crosspoint/Crosspoint.Api/appsettings.json
@@ -7,6 +7,30 @@
     }
   },
   "Extron": {
+    "Inputs": {
+      "1": "Input 1",
+      "2": "Input 2",
+      "3": "Input 3",
+      "4": "Input 4",
+      "5": "Input 5",
+      "6": "Input 6",
+      "7": "Input 7",
+      "8": "Input 8",
+      "9": "Input 9",
+      "10": "Input 10"
+    },
+    "Outputs": {
+      "1": "Output 1",
+      "2": "Output 2",
+      "3": "Output 3",
+      "4": "Output 4",
+      "5": "Output 5",
+      "6": "Output 6",
+      "7": "Output 7",
+      "8": "Output 8",
+      "9": "Output 9",
+      "10": "Output 10"
+    },
     "Mode": "",
     "Telnet": {
       "ReadTimeout": 1000,
