--- a/SystemCommunicator/appsettings.json
+++ b/SystemCommunicator/appsettings.json
@@ -20,7 +20,7 @@
       "ReadTimeout": 1000,
       "WriteTimeout": 1000,
       "AutoOpen": "true",
-      "Port": "COM1"
+      "Port": "/dev/ttyUSB0"
     }
   }
 }
