--- a/System8/System8.React/appsettings.json
+++ b/System8/System8.React/appsettings.json
@@ -1,10 +1,38 @@
 {
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
+    }
+  },
+  "Extron": {
+    "Inputs": {
+      "1": "Input 1",
+      "2": "Input 2",
+      "3": "Input 3",
+      "4": "Input 4",
+      "5": "Input 5",
+      "6": "Input 6",
+      "7": "Input 7",
+      "8": "Input 8",
+      "9": "Input 9",
+      "10": "Input 10"
     },
-"AllowedHosts": "*"
+    "Mode": "Serial",
+    "Serial": {
+      "ReadTimeout": 1000,
+      "WriteTimeout": 1000,
+      "AutoOpen": "true",
+      "Port": "/dev/ttyUSB0"
+    }
+  },
+  "Kestrel": {
+    "EndPoints": {
+      "Http": {
+        "Url": "http://*:8000"
+      }
+    }
+  },
+  "AllowedHosts": "*"
 }
