--- a/System8/System8Communicator/System8.Communicator.csproj
+++ b/System8/System8Communicator/System8.Communicator.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\..\SystemCommunicator\SystemCommunicator.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
+  </ItemGroup>
+
 </Project>
