Finalized the UI with some fancy bootstrap buttons

--- a/System8/System8.React/appsettings.json
+++ b/System8/System8.React/appsettings.json
@@ -19,7 +19,7 @@
       "9": "Input 9",
       "10": "Input 10"
     },
-    "Mode": "Serial",
+    "Mode": "development",
     "Serial": {
       "ReadTimeout": 1000,
       "WriteTimeout": 1000,
