--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -29,54 +29,6 @@ jobs:
           release_name: Release ${{ steps.tag_version.outputs.new_tag }}
           body: ${{ steps.tag_version.outputs.changelog }}
 
-  build_sys8_api:
-    name: Build, test, and Publish System8 API
-    runs-on: ubuntu-latest
-    needs: [tag]
-    
-    steps:    
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 5.0.x
-    
-    - name: Checkout
-      uses: actions/checkout@v2
-      
-    - name: 'Get Previous tag'
-      id: previoustag
-      uses: actions-ecosystem/action-get-latest-tag@v1
-          
-    - name: Restore dependencies
-      run: dotnet restore ./System8/System8.Api/System8.Api.csproj
-      
-    - name: Build
-      run: dotnet build --no-restore ./System8/System8.Api/System8.Api.csproj
-      
-    - name: Test
-      run: dotnet test --no-build --verbosity normal
-      
-    - name: Publish API
-      if: success()
-      run: dotnet publish -c Release -o ./Release/System8/Api ./System8/System8.Api/System8.Api.csproj
-
-    - name: Zip API
-      uses: thedoctor0/zip-release@master
-      with:
-        type: 'zip'
-        filename: './system8-api-${{ github.sha }}.zip'
-        path: './Release/System8/Api'
-        
-    - name: Upload API
-      uses: ncipollo/release-action@v1
-      with:
-        artifacts: "./system8-api-${{ github.sha }}.zip"
-        allowUpdates: 'true'
-        commit: ${{ github.sha }}
-        omitBody: 'true'
-        tag: ${{ steps.previoustag.outputs.tag }}
-        token: ${{ secrets.GITHUB_TOKEN }}
-
   build_sys8_ui:
     name: Build and Publish System8 UI
     runs-on: ubuntu-latest
@@ -101,14 +53,14 @@ jobs:
       uses: actions-ecosystem/action-get-latest-tag@v1
     
     - name: Restore dependencies
-      run: dotnet restore ./System8/System8.Ui/System8.Ui.csproj
+      run: dotnet restore ./System8/System8.React/System8.React.csproj
       
     - name: Build
-      run: dotnet build --no-restore ./System8/System8.Ui/System8.Ui.csproj
+      run: dotnet build --no-restore ./System8/System8.React/System8.React.csproj
       
     - name: Publish UI
       if: success()
-      run: dotnet publish -c Release -o ./Release/System8/Ui ./System8/System8.Ui/System8.Ui.csproj
+      run: dotnet publish -c Release -o ./Release/System8/Ui ./System8/System8.React/System8.React.csproj
     
     - name: Zip UI
       uses: thedoctor0/zip-release@master
