--- a/System8/System8.React/ClientApp/package.json
+++ b/System8/System8.React/ClientApp/package.json
@@ -5,21 +5,21 @@
   "dependencies": {
     "bootstrap": "^5.1.0",
     "jquery": "^3.5.1",
-    "merge": "^1.2.1",
+    "merge": "^2.1.1",
     "oidc-client": "^1.9.0",
     "react": "^16.0.0",
     "react-bootstrap": "^2.0.0-beta.6",
     "react-dom": "^16.0.0",
+    "react-router": "^5.2.1",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.4",
+    "react-scripts": "^4.0.3",
     "reactstrap": "^8.4.1",
     "rimraf": "^2.6.2"
   },
   "devDependencies": {
     "ajv": "^6.9.1",
     "cross-env": "^5.2.0",
-    "eslint": "^6.8.0",
     "eslint-config-react-app": "^5.2.0",
     "eslint-plugin-flowtype": "^4.6.0",
     "eslint-plugin-import": "^2.20.1",
